--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
     <div class="main">
       <div class="emoji mb-6">💣🤯💥</div>
       <button class="button">Boom?</button>
+    <div class="image">
+      <img src="images/picture.png" alt="sample image">
+    </div>
     </div>
   </body>
 </html>
